Initial commit on frontend, added maven resources, added favicon, added bower

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Portal</title>
 </head>
 <body>
-lol
+
+<script src="bower_components/angular/angular.js"></script>
 </body>
 </html>
