Some style changes

--- a/src/main/webapp/app/shared/topnav/topnavTemplate.html
+++ b/src/main/webapp/app/shared/topnav/topnavTemplate.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="navbar-header">
 
         <!-- note the ng-init and ng-click here: -->
@@ -9,14 +9,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#/"><img class="logo" src=""></a>
+        <a class="navbar-brand" href="#/"><img class="logo" src="favicon.ico"></a>
     </div>
 
     <div class="collapse navbar-collapse" uib-collapse="navCollapsed">
         <ul class="nav navbar-nav">
-            <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
-            <li><a href="#mapping"><i class="fa fa-sitemap" aria-hidden="true"></i> Blog</a></li>
-            <li><a href="#search"><i class="fa fa-search" aria-hidden="true"></i> Portfolio</a></li>
+            <li><a ui-sref="home">Home</a></li>
+            <li><a ui-sref="blog">Blog</a></li>
+            <li><a ui-sref="portfolio">Portfolio</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <!-- Todo add login and register -->
