--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,9 +7,10 @@
 
 </head>
 <body ng-app="app">
-<ng-sidebar></ng-sidebar>
+<ng-topnav></ng-topnav>
+<div class="container">
 <div ui-view></div>
-
+</div>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
