Added initial views for login, blog and mock view for admin for dev purposes

--- a/src/main/webapp/app/shared/topnav/topnavTemplate.html
+++ b/src/main/webapp/app/shared/topnav/topnavTemplate.html
@@ -19,7 +19,7 @@
             <li><a ui-sref="portfolio">Portfolio</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <!-- Todo add login and register -->
+            <li class="login-menu-item"><a ui-sref="login"><i class="glyphicon glyphicon-user"></i> Login</a></li>
         </ul>
     </div>
 </nav>
