--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Portal</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
 
 </head>
 <body ng-app="app">
