--- a/src/main/webapp/app/shared/topnav/topnavTemplate.html
+++ b/src/main/webapp/app/shared/topnav/topnavTemplate.html
@@ -19,7 +19,7 @@
             <li><a ui-sref="portfolio">Portfolio</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li class="login-menu-item"><a ui-sref="login"><i class="glyphicon glyphicon-user"></i> Login</a></li>
+            <li class="login-menu-item"><a ui-sref="admin"><i class="glyphicon glyphicon-user"></i> Admin</a></li>
         </ul>
     </div>
 </nav>
