--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,10 +15,18 @@
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<script src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
+<script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
 
 <script src="app/app.module.js"></script>
+<script src="app/app.config.js"></script>
 <script src="app/app.routes.js"></script>
+
+
 <script src="app/shared/topnav/ngTopnav.js"></script>
 <script src="app/components/home/homeController.js"></script>
+<script src="app/components/login/loginController.js"></script>
+<script src="app/components/portfolio/portfolioController.js"></script>
+<script src="app/shared/services/authService.js"></script>
 </body>
 </html>
